--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -878,6 +878,14 @@ header.topbar .searchbar input{
   }
 }
 
+/* FIX iOS rounded seam between search + city inputs */
+header.topbar .searchbar input.form-control{
+  background: transparent !important;
+  border: 0 !important;
+  box-shadow: none !important;
+  border-radius: 0 !important;
+}
+
 </style>
 
 
