--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -785,6 +785,26 @@ header.topbar .searchbar input.form-control{
 
 </style>
 
+<style id="searchbar-final-fix">
+/* === SEARCHBAR FINAL VERTICAL FIX (GLOBAL) === */
+
+header.topbar .topbar__inner{
+  min-height: 64px;
+  align-items: center;
+}
+
+header.topbar form.searchbar{
+  display: flex;
+  align-items: center;
+  margin: 0;
+}
+
+header.topbar .searchbar-wrap{
+  display: flex;
+  align-items: center;
+  height: 44px;
+}
+</style>
 
 
 
